--- a/css/main.css
+++ b/css/main.css
@@ -33,23 +33,6 @@
     margin-right: 2px;
 }
 
-/* html, body {
-    min-height: 100%;
+.testaa{
+    margin-top: 10.3%;
 }
-body {
-    padding: 0;
-    margin: 0;
-} */
-        
-/* footer {
-    
-    bottom: 0;
-    width: 100%;
-    height: 100px;    
-    text-align: center;
-    line-height: 100px;
-}
-*/
-/* .form{
-    margin-top: 7%;
-}  */
