--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,18 @@
 .testaa{
     margin-top: 10.3%;
 }
+
+.aaaaaa
+{
+    margin-top: -1%;
+    
+}
+ .texto
+ {
+     margin-top: -3%;
+ }
+
+ .texto2
+ {
+     margin-top: -2%;
+ }
